[tool.poetry]
name = "sanic-quill"
version = "0.0.2"
description = "Sanic-quill is a port of Flask-quill to Sanic ecosystem. (quill.js WYSIWYG editor)"
authors = ["xnuinside <xnuinside@gmail.com>"]
readme = "README.rst"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Sanic-Jinja2 = "^0.8.0"
wtforms = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
